modification des attribut du rendu

--- a/templates/aep/form_aep.html.twig
+++ b/templates/aep/form_aep.html.twig
@@ -11,124 +11,178 @@
             <fieldset class="localInformations">
                 <legend><h3>Local informations</h3></legend>
                 {% for localInformation in form.localInformations %}
-                    {{ form(localInformation) }}
+                    {{ form_row(localInformation.region, { 'label': 'Région', 'attr': { 'placeholder': "région de la source"}}) }}
+                    {{ form_row(localInformation.department, {'label': 'Département', 'attr': {'placeholder': 'département de la source'}}) }}
+                    {{ form_row(localInformation.borough, {'label': 'Arrondissement', 'attr': {'placeholder': 'arrondissement de la source'}}) }}
+                    {{ form_row(localInformation.locality, {'label': 'Localité ou village', 'attr': {'placeholder': 'localité ou village de la source'}}) }}
+                    {{ form_row(localInformation.district, {'label': 'Quartier', 'attr': {'placeholder': 'quartier de la source'}}) }}
+                    {{ form_row(localInformation.population, {'label': 'Population', 'attr': {'placeholder': 'population de la localité', 'inputmode': 'decimal'}}) }}
+
+                    <fieldset class="gpsCoordinates">
+                        <legend><h3>GPS coordinates de la souce</h3></legend>
+                        {% for gpsCoordinates in localInformation.gpsCoordinates %}
+                            {{ form_row(gpsCoordinates.latitude, {'label': 'Latitude', 'attr': {'placeholder': 'latitude', 'inputmode': 'decimal'}}) }}
+                            {{ form_row(gpsCoordinates.longitude, {'label': 'Longitude', 'attr': {'placeholder': 'longitude', 'inputmode': 'decimal'}}) }}
+                        {% endfor %}
+                    </fieldset>
                 {% endfor %}
             </fieldset>
 
             {# AEP forage, prise en eau de surface, at captage par source #}
             <fieldset class="type" data-type-aep="{{ type }}">
-                <legend><h3>AEP {{ type }}</h3></legend>
+                <legend><h3>Adduction en Eau Potable : {{ type|capitalize }}</h3></legend>
 
-                {% if type == 'forage|autre' %}
-                    {{ form_row(form.depth) }}
+                {% if type is same as ('forage') or type is same as ('autre') %}
+                    {{ form_row(form.depth, {'label': 'Profondeur', 'attr': {
+                        'placeholder': 'profondeur de la source',
+                        'inputmode': 'decimal'
+                    }}) }}
                 {% endif %}
 
-                {{ form_row(form.buildingYear) }}
-                {{ form_row(form.funding) }}
+                {{ form_row(form.buildingYear, {'label': 'Année de construction'}) }}
+                {{ form_row(form.funding, {'label': 'Financement', 'attr': {'placeholder': 'financement'}}) }}
 
-                {% if type == 'forage' %}
-                {# Dossier de recollement #}
-                <fieldset class="stickingBack">
-                    <legend><h3>Sticking back</h3></legend>
-                    {% for stickingback in form.stickingBack %}
-                        {{ form(stickingback) }}
-                    {% endfor %}
-                </fieldset>
+                {% if type is same as ('forage') %}
+                    {# Dossier de recollement #}
+                    <fieldset class="stickingBack">
+                        <legend><h3>Dossier de recollement</h3></legend>
+                        {% for stickingback in form.stickingBack %}
+                            {{ form_row(stickingback.exist, {'label': 'Statut'}) }}
+                            {{ form_row(stickingback.comments, {'label': 'Commentaires', 'attr': {'placeholder': 'commentaires'}}) }}
+                        {% endfor %}
+                    </fieldset>
                 {% endif %}
 
-                {{ form_row(form.productionCapacity) }}
+                {{ form_row(form.productionCapacity, {'label': 'Capacité de production', 'attr': {'placeholder': 'capacité de production', 'inputmode': 'decimal'}}) }}
 
                 {# stockage #}
                 <fieldset class="storage">
-                    <legend><h3>Storage</h3></legend>
+                    <legend><h3>Stockage</h3></legend>
                     {% for store in form.storage %}
-                        {{ form(store) }}
+                        {{ form_row(store.quantity, {'label': 'Quantité', 'attr': {'placeholder': 'quantité en m3', 'inputmode': 'decimal'}}) }}
+                        {{ form_row(store.sufficient, {'label': 'Etat'}) }}
+                        {{ form_row(store.structureStatus, {'label': 'Etat de la structure'}) }}
                     {% endfor %}
                 </fieldset>
 
-                {% if type == 'prise-en-eau-de-surface' %}
-                {# Mode de communication entre l'agent ou comité de gestion et la commune #}
-                <fieldset class="agentCommunicationMode">
-                    <legend><h3>Agent communication mode</h3></legend>
-                    {% for agentCommunication in form.agentCommunicationMode %}
-                        {{ form(agentCommunication) }}
-                    {% endfor %}
-                </fieldset>
+                {% if type is same as ('prise-en-eau-de-surface') %}
+                    {# Mode de communication entre l'agent ou comité de gestion et la commune #}
+                    <fieldset class="agentCommunicationMode">
+                        <legend><h3>Mode de communication entre l’agent ou comité degestion et la Commune</h3></legend>
+                        {% for agentCommunication in form.agentCommunicationMode %}
+                            {{ form_row(agentCommunication.contract, {'label': 'Contrat'}) }}
+                            {{ form_row(agentCommunication.capacityBuilding, {'label': 'renforcement de capacité'}) }}
+                            {{ form_row(agentCommunication.others, {'label': 'Autre', 'attr': {
+                                'placeholder': 'autre à préciser'
+                            }}) }}
+                        {% endfor %}
+                    </fieldset>
                 {% endif %}
 
                 {% if type != 'captage-par-source' %}
-                {{ form_row(form.networkLength) }}
+                    {{ form_row(form.networkLength, {'label': 'Longueur du réseau', 'attr': {
+                        'placeholder': 'longueur du réseau',
+                        'inputmode': 'decimal'
+                    }}) }}
                 {% endif %}
 
-                {{ form_row(form.adductionType) }}
+                {{ form_row(form.adductionType, {'label': "Type d'adduction"}) }}
 
-                {% if type == 'captage-par-source' %}
-                    {{ form_row(form.linearNetwork) }}
+                {% if type is same as ('captage-par-source') %}
+                    {{ form_row(form.linearNetwork, {'label': 'Réseau linéaire', 'attr': {
+                        'placeholder': 'réseau linéaire'
+                    }}) }}
                 {% endif %}
 
                 {# Type d'équipement #}
                 <fieldset class="equipmentAep">
-                    <legend><h3>equipment AEP</h3></legend>
+                    <legend><h3>Type d'équipement</h3></legend>
                     {% for equipment in form.equipmentAep %}
-                        {{ form(equipment) }}
+                        {{ form_row(equipment.pumpQuality, {'label': 'Qualité de la pompe'}) }}
+                        {{ form_row(equipment.others, {'label': 'Autre', 'attr': {'placeholder': 'autre à préciser'}}) }}
                     {% endfor %}
                 </fieldset>
 
                 {# Analyse et traitement de l'eau #}
                 <fieldset class="waterTraitmentAnalysis">
-                    <legend><h3>Water traitment analysis</h3></legend>
+                    <legend><h3>Analyse et traitement de l'eau</h3></legend>
                     {% for waterTraitment in form.waterTraitmentAnalysis %}
-                        {{ form(waterTraitment) }}
+                        {{ form_row(waterTraitment.unitTraitmentPresence, {'label': "Présence d'une unité de traitement"}) }}
+                        {{ form_row(waterTraitment.analysisFrequency, {'label': 'Fréquence de traitement de l\'eau'}) }}
+                        {{ form_row(waterTraitment.lastAnalysisAt, {'label': 'Date de la dernière analyse de l\'eau'}) }}
+                        {{ form_row(waterTraitment.appliedTraitmentType, {'label': 'Type de traitement appliqué', 'attr': {'placeholder': 'Type de traitement appliqué'}}) }}
                     {% endfor %}
                 </fieldset>
 
-                {{ form_row(form.operatingState) }}
+                {{ form_row(form.operatingState, {'label': 'Etat de fonctionement'}) }}
 
                 {# Mode de gestion #}
                 <fieldset class="managementMode">
-                    <legend><h3>Management mode</h3></legend>
-                    {% for managementmode in form.managementMode %}
-                        {{ form(managementmode) }}
+                    <legend><h3>Mode de gestion</h3></legend>
+                    {% for managementMode in form.managementMode %}
+                        {{ form_row(managementMode.managementAgent, {'label': 'Agent de gestion'}) }}
+                        {{ form_row(managementMode.others, {'label': 'Autre', 'attr': {'placeholder': 'autre à préciser'}}) }}
                     {% endfor %}
                 </fieldset>
 
                 {# Mode de financement #}
                 <fieldset class="fundingMode">
-                    <legend><h3>Funding mode</h3></legend>
-                    {% for fundingmode in form.fundingMode %}
-                        {{ form(fundingmode) }}
+                    <legend><h3>Mode de financement</h3></legend>
+                    {% for fundingMode in form.fundingMode %}
+                        {{ form_row(fundingMode.facturationMode, {'label': 'Mode facturation'}) }}
+                        {{ form_row(fundingMode.others, {'label': 'Autre', 'attr': {'placeholder': 'autre à préciser'}}) }}
                     {% endfor %}
                 </fieldset>
 
                 {# Maintenance #}
                 <fieldset class="maintenance">
                     <legend><h3>Maintenance</h3></legend>
-                    {% for maint in form.maintenance %}
-                        {{ form(maint) }}
+                    {% for maintenance in form.maintenance %}
+                        {{ form_row(maintenance.agent, {'label': 'Agent de maintenance'}) }}
+                        {{ form_row(maintenance.others, {'label': 'Autre', 'attr': {'placeholder': 'autre à préciser'}}) }}
                     {% endfor %}
                 </fieldset>
 
                 {# Source d'AEP #}
                 <fieldset class="source" data-source-aep="{{ source }}">
-                    <legend><h3>{{ type }}, {{ source }}</h3></legend>
-                    {% if source == 'pmh' or 'autre' %}
+                    <legend><h3>Source d'adduction : {{ source|capitalize }}</h3></legend>
+                    {% if source is same as ('pmh') or source is same as ('autre') %}
                         {% for pmh in form.aepPmh %}
-                            {{ form(pmh) }}
+                            {{ form_row(pmh.pompBrand, {'label': 'Marque de pompe', 'attr': {
+                                'placeholder': 'marque de la pompe'
+                            }}) }}
+                            {{ form_row(pmh.pumpPower, {'label': 'Puissance de la pompe', 'attr': {
+                                'placeholder': 'puissance de la pompe'
+                            }}) }}
+                            {{ form_row(pmh.superstructure, {'label': 'Etat de la structure'}) }}
+                            {{ form_row(pmh.drainingChannel, {'label': "Chenal d'évacuation des eaux"}) }}
+                            <fieldset>
+                                <legend>Puit perdu</legend>
+                                {% for lostWell in pmh.lostWell %}
+                                    {{ form_row(lostWell.exist, {'label': 'Statut'}) }}
+                                    {{ form_row(lostWell.functional, {'label': 'Etat'}) }}
+                                {% endfor %}
+                            </fieldset>
                         {% endfor %}
-                    {% elseif source == 'source-amelioree' or 'autre' %}
+                    {% elseif source is same as ('source-amelioree') or source is same as ('autre') %}
                         {% for improveSource in form.aepImproveSource %}
-                            {{ form(improveSource) }}
+                            {{ form_row(improveSource.superstructure, {'label': "Construction d'une superstructure"}) }}
+                            {{ form_row(improveSource.pipeline, {'label': 'Canalisation de l\'eau'}) }}
                         {% endfor %}
-                    {% elseif source == 'puit-traditionel' or 'autre' %}
-                        {% for traditionalWell in form.aepTrditionalWell %}
-                            {{ form(traditionalWell) }}
+                    {% elseif source is same as ('puit-traditionel') or source is same as ('autre') %}
+                        {% for traditionalWell in form.aepTraditionalWell %}
+                            {{ form_row(traditionalWell.bucket, {'label': "Présence d'un seau"}) }}
+                            {{ form_row(traditionalWell.rope, {'label': "Présence d'une corde"}) }}
+                            {{ form_row(traditionalWell.lid, {'label': "Présence d'une couverture du puit"}) }}
+                            {{ form_row(traditionalWell.pulley, {'label': "Présence d'une poulie"}) }}
+                            {{ form_row(traditionalWell.superstructure, {'label': "Construction d'une superstructure"}) }}
                         {% endfor %}
                     {% endif %}
                 </fieldset>
 
-                {{ form_row(form.createdAt) }}
-
             </fieldset>
+
+            <button type="submit" class="btn btn-success">Enregistrer</button>
         {{ form_end(form) }}
     </div>
 {% endblock %}
