--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,9 +4,19 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
-            {# <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
+            {# bootstrap 4.5 stylesheet refrence #}
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
                 integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
-                crossorigin="anonymous"> #}
+                crossorigin="anonymous">
+
+            {# Material Icons #}
+            <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+            {# plugin easy numpad stylesheet reference #}
+            <link rel="stylesheet" href="{{ asset('css/easy-numpad.css') }}">
+
+            {# jQuery UI Datepicker #}
+            <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
         {% endblock %}
     </head>
     <body>
@@ -14,7 +24,8 @@
             {% block body %}{% endblock %}
         </div>
         {% block javascripts %}
-            {# <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
+            {# bootstrap 4.5 javascript reference #}
+            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
                 integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" 
                 crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
@@ -22,10 +33,21 @@
                 crossorigin="anonymous"></script>
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
                 integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
-                crossorigin="anonymous"></script> #}
+                crossorigin="anonymous"></script>
 
+            {# jQury 3.5 
             <script src="{{ asset('js/jquery.js') }}"></script>
+            #}
+
+            {# form AEP #}
             <script src="{{ asset('js/formAep.js') }}"></script>
+
+            {# plugin easy numpad javascript reference #}
+            <script src="{{ asset('js/easy-numpad.js') }}"></script>
+
+            {# plugin jQuery UI Datepicker javascript reference #}
+            <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+            <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         {% endblock %}
     </body>
 </html>
